<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">陌陌助手</string>
    <string name="title_section1">微信红包</string>
    <string name="title_section2">支付宝红包</string>
    <string name="title_section3">关于</string>
    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>
    <string name="sendcontent">你好，很高兴认识你</string>
    <string name="action_example">注册</string>
    <string name="action_settings">设置</string>
    <string name="red_envelope_assistant_name">陌陌助手</string>
	<string name="accessibility_description">启动陌陌助手服务</string>
	<string name="open_accessibility_service_hint">请在弹出页面选择打开【陌陌助手】服务，否则将无法使用本功能</string>
	<string name="close_accessibility_service_hint">请在弹出页面选择关闭【陌陌助手】服务</string>
	<string name="ui_wechat_btn_service_on_text">停止服务</string>
	<string name="ui_wechat_btn_service_off_text">启动服务</string>
	<string name="ui_wechat_tv_service_on">服务已启动</string>
	<string name="ui_wechat_tv_service_off">服务未启动</string>
	<string name="ui_wechat_open_wechat">打开陌陌</string>
	<string name="ui_wechat_one_key_start_service">一键启动服务</string>
	<string name="ui_wechat_settings">设置</string>
	<string name="ui_wechat_name">陌陌助手</string>
	<string name="ui_wechat_service_state">服务状态</string>
	<string name="ui_alipay_name">支付宝红包助手</string>
	<string name="ui_alipay_clear_data_success">清除数据成功</string>
	<string name="ui_alipay_rooted">已root</string>
	<string name="ui_alipay_unroot">未root</string>
	<string name="ui_alipay_not_able_to_get_root">无法获得Root权限，请在Root管理中放行</string>
	<string name="ui_alipay_clear_data_tip">请在弹出页面手动点击【清除数据】\n不是【清除缓存】</string>
	<string name="ui_alipay_root_state">root状态</string>
	<string name="ui_alipay_auto_clear_data">自动清除数据</string>
	<string name="ui_alipay_manual_clear_data">手动清除数据</string>
	<string name="ui_alipay_open_alipay">打开支付宝</string>
	<string name="ui_alipay_onekey_clear_data">一键清除数据</string>
	<string name="wechat_acc_service_start_notification">陌陌助手服务已启动</string>
	<string name="ui_about_version">版本：</string>
	<string name="ui_about_default_version">版本：1.0.0</string>
	<string name="ui_about_description">此应用完全免费\n1.支付宝红包 （每次抢到红包后,使用本软件清除应用数据后，再登录支付宝即可继续抢红包）\n2.微信红包（请打开要抢红包的群页面，应用会自动无人值守抢红包，请保持屏幕常亮）</string>
	<string name="ui_about_statement">使用本软件带来的任何风险问题，本人以及团队不负任何责任</string>
	<string name="ui_about_author">By RxRead</string>
	<string name="ui_settings_instruction">运行微信红包助手前请先打开微信，然后按Home退到桌面，打开红包助手，点击开启红包服务，开启后即可自动运行</string>
	<string name="ui_settings_language">语言设置</string>
	<string name="ui_settings_auto_mode">全自动抢红包模式</string>
	<string name="ui_settings_safe_mode">安全抢红包模式</string>
	<string name="ui_settings_auto_mode_description">此模式下如果聊天页面含有红包，会自动退出微信\n如想正常聊天，请关闭红包服务，但关闭后无法自动抢红包\n</string>
	<string name="ui_settings_safe_mode_description">此模式可以正常聊天，但是聊天页面的红包需要手动点击，程序会自动打开红包</string>
	<string name="wechat_acc_service_red_envelope_notification_identification">: [微信红包]</string>
	<string name="wechat_acc_service_red_envelope_open_btn_str">拆红包</string>
	<string name="wechat_acc_service_red_envelope_list_identification">领取红包</string>
</resources>
