<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.updsssggg.redenvelopeassistant.HomeActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:id="@+id/toplayout"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:text="@string/ui_wechat_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wechat_service_state_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wechat_gap"
            android:text="@string/ui_wechat_service_state"
            android:textSize="25sp" />
    </LinearLayout>
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_below="@+id/toplayout"
        >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendtxt"
            android:textSize="16sp" 
            android:textColor="#000000"
            />
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="每次处理个数:"
                />
            <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/handlenumber"
            android:textSize="16sp" 
            android:textColor="#000000"
            android:numeric="integer"
            android:text="5"
            />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="消息回复总和:"
                />
            <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/msgnumber"
            android:textSize="16sp" 
            android:textColor="#000000"
            android:numeric="integer"
            android:text="30"
            />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="招呼间隔时间:"
                />
            <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/msgtime"
            android:textSize="16sp" 
            android:textColor="#000000"
            android:numeric="integer"
            android:text="3"
            />
             <TextView 
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:text="分钟"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioGroup 
                android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
                android:id="@+id/radgroup"
                >
                <RadioButton 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rdo_word"
                    android:text="发文字"
                    android:checked="true"
                    />
                 <RadioButton 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rdo_img"
                    android:text="发图片"
                    />
            </RadioGroup>
        </LinearLayout>
        <Button 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="保存"
            android:id="@+id/save"
            />
        
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >
		<TextView
            android:id="@+id/wechat_setting_tv"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/wechat_gap"
            android:background="@drawable/btn_green_selector"
            android:gravity="center"
            android:text="@string/ui_wechat_settings"
            android:textColor="@android:color/white" 
            android:visibility="gone"
            />
        
        <TextView
            android:id="@+id/wechat_openapp_tv"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/wechat_gap"
            android:background="@drawable/btn_green_selector"
            android:gravity="center"
            android:text="@string/ui_wechat_open_wechat"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/wechat_onekey_clean_data_tv"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/wechat_gap"
            android:background="@drawable/btn_green_selector"
            android:gravity="center"
            android:text="@string/ui_wechat_one_key_start_service"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>